--- a/Aplicaciones/Aplicaciones.csproj
+++ b/Aplicaciones/Aplicaciones.csproj
@@ -69,6 +69,8 @@
   <ItemGroup>
     <Content Include="Aplicacion1a.aspx" />
     <Content Include="Aplicacion1b.aspx" />
+    <Content Include="Aplicacion2a.aspx" />
+    <Content Include="Aplicacion2b.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -85,6 +87,20 @@
     </Compile>
     <Compile Include="Aplicacion1b.aspx.designer.cs">
       <DependentUpon>Aplicacion1b.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Aplicacion2a.aspx.cs">
+      <DependentUpon>Aplicacion2a.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Aplicacion2a.aspx.designer.cs">
+      <DependentUpon>Aplicacion2a.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Aplicacion2b.aspx.cs">
+      <DependentUpon>Aplicacion2b.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Aplicacion2b.aspx.designer.cs">
+      <DependentUpon>Aplicacion2b.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
